--- a/index.html
+++ b/index.html
@@ -1,157 +1,122 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>NightDark Store - Jeux & Applications</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #0b0b0b;
-      color: #f5f5f5;
-      line-height: 1.6;
-    }
-    header {
-      background: #121212;
-      padding: 20px 0;
-      text-align: center;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.5);
-    }
-    header img {
-      height: 60px;
-      width: auto;
-    }
-    header h1 {
-      margin: 10px 0 0;
-      font-size: 2em;
-      color: #ffffff;
-    }
-    .intro {
-      text-align: center;
-      padding: 40px 20px;
-      max-width: 700px;
-      margin: auto;
-    }
-    .intro p {
-      font-size: 1.2em;
-      color: #ccc;
-    }
-    .games {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 30px;
-      padding: 40px 20px;
-      max-width: 1000px;
-      margin: auto;
-    }
-    .game-card {
-      background: #1b1b1b;
-      border-radius: 10px;
-      text-align: center;
-      padding: 20px;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-    .game-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 6px 20px rgba(255, 255, 255, 0.1);
-    }
-    .game-card img {
-      width: 100%;
-      border-radius: 8px;
-      height: 180px;
-      object-fit: cover;
-    }
-    .game-card h3 {
-      margin: 15px 0 10px;
-      color: #fff;
-    }
-    .game-card a {
-      text-decoration: none;
-      color: #00bcd4;
-      font-weight: bold;
-    }
-    .contact {
-      background: #121212;
-      padding: 50px 20px;
-      text-align: center;
-    }
-    .contact h2 {
-      margin-bottom: 20px;
-      color: #fff;
-    }
-    .contact form {
-      max-width: 400px;
-      margin: auto;
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-    }
-    .contact input, .contact textarea {
-      padding: 10px;
-      border: none;
-      border-radius: 6px;
-      outline: none;
-      font-size: 1em;
-    }
-    .contact input[type="submit"] {
-      background: #00bcd4;
-      color: #fff;
-      cursor: pointer;
-      font-weight: bold;
-      transition: background 0.3s;
-    }
-    .contact input[type="submit"]:hover {
-      background: #0097a7;
-    }
-    footer {
-      background: #0a0a0a;
-      color: #777;
-      text-align: center;
-      padding: 15px 0;
-      font-size: 0.9em;
-    }
-    @media (max-width: 600px) {
-      header h1 {
-        font-size: 1.5em;
-      }
-      .intro p {
-        font-size: 1em;
-      }
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NightDark Store</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: 'Poppins', sans-serif;
+            background-color: #0a0a0a;
+            color: white;
+            text-align: center;
+        }
+        header {
+            background-color: #111;
+            padding: 20px;
+        }
+        header img {
+            width: 100px;
+            height: auto;
+        }
+        h1 {
+            font-size: 2.5em;
+            margin: 10px 0;
+        }
+        .tagline {
+            font-size: 1.2em;
+            color: #bbb;
+            margin-bottom: 40px;
+        }
+        .games {
+            display: flex;
+            justify-content: center;
+            gap: 30px;
+            flex-wrap: wrap;
+            padding: 20px;
+        }
+        .game {
+            background: #1b1b1b;
+            border-radius: 15px;
+            padding: 20px;
+            width: 250px;
+            transition: transform 0.3s;
+        }
+        .game:hover {
+            transform: translateY(-5px);
+        }
+        .game img {
+            width: 100%;
+            border-radius: 10px;
+        }
+        .game a {
+            text-decoration: none;
+            color: #1e90ff;
+            display: block;
+            margin-top: 10px;
+            font-weight: bold;
+        }
+        footer {
+            background: #111;
+            padding: 30px;
+            margin-top: 50px;
+        }
+        form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            max-width: 400px;
+            margin: 0 auto;
+        }
+        input, textarea {
+            width: 100%;
+            margin: 10px 0;
+            padding: 10px;
+            border: none;
+            border-radius: 8px;
+        }
+        button {
+            background-color: #1e90ff;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            font-weight: bold;
+        }
+        button:hover {
+            background-color: #0078e7;
+        }
+    </style>
 </head>
 <body>
-  <header>
-    <img src="logo.png" alt="NightDark Store Logo" />
-    <h1>NightDark Store</h1>
-  </header>
-  <section class="intro">
-    <p>NightDark Store crée des jeux mobiles uniques et captivants, offrant des expériences immersives et divertissantes pour tous les joueurs à travers le monde.</p>
-  </section>
-  <section class="games">
-    <div class="game-card">
-      <img src="https://m.media-amazon.com/images/I/71bW8AIh7WL.png" alt="Night Endless Battle in Playground's" />
-      <h3>Night Endless Battle in Playground's</h3>
-      <a href="https://www.amazon.com/Night-Endless-Battle-in-Playgrounds/dp/B0F4FZVMK8" target="_blank">Voir sur Amazon</a>
-    </div>
-    <div class="game-card">
-      <img src="https://m.media-amazon.com/images/I/81R3pkOqlkL.png" alt="Crazy Boy Horror" />
-      <h3>Crazy Boy Horror</h3>
-      <a href="https://www.amazon.com/NightDark-Store-Crazy-Boy-Horror/dp/B0F5J5HBTK" target="_blank">Voir sur Amazon</a>
-    </div>
-  </section>
-  <section class="contact">
-    <h2>Contactez-nous</h2>
-    <form action="mailto:ricardoncounden@hotmail.com" method="post" enctype="text/plain">
-      <input type="text" name="name" placeholder="Votre nom" required />
-      <input type="email" name="email" placeholder="Votre email" required />
-      <textarea name="message" rows="5" placeholder="Votre message..." required></textarea>
-      <input type="submit" value="Envoyer" />
-    </form>
-  </section>
-  <footer>
-    © 2025 NightDark Store — Tous droits réservés.
-  </footer>
+    <header>
+        <img src="logo.png" alt="NightDark Store Logo">
+        <h1>NightDark Store</h1>
+        <p class="tagline">NightDark Store crée des jeux mobiles uniques et captivants, offrant des expériences immersives et divertissantes pour tous les joueurs à travers le monde.</p>
+    </header>
+
+    <section class="games">
+        <div class="game">
+            <img src="https://m.media-amazon.com/images/I/81dMmrvWadL.png" alt="Night Endless Battle in Playground’s">
+            <a href="https://www.amazon.com/Night-Endless-Battle-in-Playgrounds/dp/B0F4FZVMK8" target="_blank">Night Endless Battle in Playground’s</a>
+        </div>
+        <div class="game">
+            <img src="https://m.media-amazon.com/images/I/81kbasTeoSL.png" alt="Crazy Boy Horror">
+            <a href="https://www.amazon.com/NightDark-Store-Crazy-Boy-Horror/dp/B0F5J5HBTK" target="_blank">Crazy Boy Horror</a>
+        </div>
+    </section>
+
+    <footer>
+        <h2>Contactez-nous</h2>
+        <form>
+            <input type="text" placeholder="Votre nom" required>
+            <input type="email" placeholder="Votre email" required>
+            <textarea rows="4" placeholder="Votre message"></textarea>
+            <button type="submit">Envoyer</button>
+        </form>
+        <p>Ou écrivez-nous à : <a href="mailto:ricardoncounden@hotmail.com" style="color:#1e90ff;">ricardoncounden@hotmail.com</a></p>
+    </footer>
 </body>
 </html>
